--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .btn { width: 100%; max-width: 300px; padding: 20px; margin: 10px 0; border-radius: 15px; font-family: 'Orbitron'; font-size: 13px; font-weight: 900; cursor: pointer; text-transform: uppercase; border: none; z-index: 100; transition: 0.3s; }
         .btn-primary { background: var(--accent); color: #000; }
         .btn-secondary { background: #111; color: #fff; border: 1px solid #222; }
-        #install-btn { display: none; background: #fff; color: #000; }
+        #install-btn { display: none; background: #fff; color: #000; border: 2px solid var(--accent); }
 
         .device-selector { display: flex; align-items: center; margin-bottom: 20px; cursor: pointer; }
         .device-selector span { font-family: 'Orbitron'; font-size: 10px; margin-left: 10px; color: #fff; }
@@ -33,6 +33,7 @@
         #view-slider { display: flex; width: 300vw; height: 100vh; transition: transform 0.4s cubic-bezier(0.2, 1, 0.2, 1); }
         .page { width: 100vw; height: 100vh; flex-shrink: 0; position: relative; display: flex; flex-direction: column; align-items: center; padding: 75px 15px 110px 15px; }
         
+        /* DIAG TARGET CENTRIRANJE */
         #diag-target { flex-grow: 1; width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
         .scroll-area { flex-grow: 1; overflow-y: auto; width: 100%; padding-bottom: 20px; }
 
@@ -129,7 +130,9 @@
             { id: 'ambient', label: 'Spoljna Temp', unit: '°C', cmd: '0146', min: -20, max: 45, n: 'Spoljna temp.', f: 'Senzor na braniku.', active: true }
         ];
 
+        // ADD TO HOME SCREEN LOGIKA
         window.addEventListener('beforeinstallprompt', (e) => {
+            console.log('Instalacija detektovana');
             e.preventDefault();
             deferredPrompt = e;
             document.getElementById('install-btn').style.display = 'block';
@@ -139,8 +142,12 @@
             if (deferredPrompt) {
                 deferredPrompt.prompt();
                 const { outcome } = await deferredPrompt.userChoice;
-                if (outcome === 'accepted') document.getElementById('install-btn').style.display = 'none';
+                if (outcome === 'accepted') {
+                    document.getElementById('install-btn').style.display = 'none';
+                }
                 deferredPrompt = null;
+            } else {
+                alert("Instalacija trenutno nije moguca preko pretraziaca.");
             }
         }
 
@@ -248,7 +255,7 @@
             await sendRaw("04");
             setTimeout(() => {
                 document.getElementById('bt-loader').style.display = 'none';
-                // Centriranje postignuto preko flexboxa u CSS-u za #diag-target
+                // Centriranje preko flexboxa definisanog u CSS-u za #diag-target
                 document.getElementById('diag-target').innerHTML = "<h2 style='color:var(--safe); font-family:Orbitron; margin:0;'>USPESNO OBRISANO</h2>";
                 document.getElementById('scan-btn').style.display = "none";
                 setTimeout(() => {
