--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 
         #view-slider { display: flex; width: 300vw; height: 100vh; transition: transform 0.4s cubic-bezier(0.2, 1, 0.2, 1); }
         .page { width: 100vw; height: 100vh; flex-shrink: 0; position: relative; display: flex; flex-direction: column; align-items: center; padding: 75px 15px 110px 15px; }
-        
-        /* DIAG TARGET CENTRIRANJE */
-        #diag-target { flex-grow: 1; width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
         .scroll-area { flex-grow: 1; overflow-y: auto; width: 100%; padding-bottom: 20px; }
+        
+        /* Centralna zona za obavestenja o skeniranju */
+        #diag-target { flex-grow: 1; width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
 
+        /* KARTICE */
         .card { width: 100%; background: #080808; border: 1px solid #151515; border-radius: 25px; padding: 20px; margin-bottom: 15px; display: flex; justify-content: space-between; align-items: center; position: relative; overflow: hidden; cursor: pointer; }
         .card-label { font-size: 10px; font-weight: 900; color: #FFF; text-transform: uppercase; z-index: 5; }
         .card-val { font-family: 'Orbitron'; font-size: 28px; font-weight: 900; color: #fff; z-index: 5; }
@@ -50,6 +51,7 @@
         .card.danger .wave { background: linear-gradient(90deg, transparent, rgba(255, 17, 17, 0.2), transparent); animation: wave-move 1.5s infinite linear; }
         @keyframes wave-move { 0% { transform: translateX(-100%) skewX(-25deg); } 100% { transform: translateX(600%) skewX(-25deg); } }
 
+        /* NAV STRELICE */
         .nav-arrows { position: fixed; bottom: 10px; width: 100%; display: flex; justify-content: space-between; padding: 0 40px; z-index: 5000; }
         .arrow { font-family: 'Orbitron'; font-size: 30px; font-weight: 900; color: var(--accent); cursor: pointer; opacity: 0.5; transition: 0.3s; padding: 10px; }
         .arrow:hover { opacity: 1; text-shadow: 0 0 15px var(--accent); }
@@ -82,12 +84,7 @@
 
     <div id="view-slider">
         <div class="page"><div class="scroll-area" id="list-target"></div></div>
-        <div class="page">
-            <div id="diag-target">
-                <p style="color:#222; font-family:Orbitron;">SKENIRANJE SPREMNO</p>
-            </div>
-            <button class="btn btn-primary" id="scan-btn" onclick="realScan()">Skeniraj vozilo</button>
-        </div>
+        <div class="page"><div id="diag-target"><center><p style="color:#222; font-family:Orbitron;">SKENIRANJE SPREMNO</p></center></div><button class="btn btn-primary" id="scan-btn" onclick="realScan()">Skeniraj vozilo</button></div>
         <div class="page"><div style="font-family:Orbitron; font-size:12px; color:var(--accent); margin-bottom:20px;">IZBOR 20 SENZORA</div><div class="scroll-area" id="settings-target"></div></div>
     </div>
 
@@ -130,9 +127,7 @@
             { id: 'ambient', label: 'Spoljna Temp', unit: '°C', cmd: '0146', min: -20, max: 45, n: 'Spoljna temp.', f: 'Senzor na braniku.', active: true }
         ];
 
-        // ADD TO HOME SCREEN LOGIKA
         window.addEventListener('beforeinstallprompt', (e) => {
-            console.log('Instalacija detektovana');
             e.preventDefault();
             deferredPrompt = e;
             document.getElementById('install-btn').style.display = 'block';
@@ -142,12 +137,8 @@
             if (deferredPrompt) {
                 deferredPrompt.prompt();
                 const { outcome } = await deferredPrompt.userChoice;
-                if (outcome === 'accepted') {
-                    document.getElementById('install-btn').style.display = 'none';
-                }
+                if (outcome === 'accepted') document.getElementById('install-btn').style.display = 'none';
                 deferredPrompt = null;
-            } else {
-                alert("Instalacija trenutno nije moguca preko pretraziaca.");
             }
         }
 
@@ -179,7 +170,9 @@
         }
 
         function moveNav(dir) {
-            currentView = Math.max(0, Math.min(2, currentView + dir));
+            currentView += dir;
+            if (currentView < 0) currentView = 0;
+            if (currentView > 2) currentView = 2;
             document.getElementById('view-slider').style.transform = `translateX(-${currentView * 100}vw)`;
         }
 
@@ -255,11 +248,11 @@
             await sendRaw("04");
             setTimeout(() => {
                 document.getElementById('bt-loader').style.display = 'none';
-                // Centriranje preko flexboxa definisanog u CSS-u za #diag-target
-                document.getElementById('diag-target').innerHTML = "<h2 style='color:var(--safe); font-family:Orbitron; margin:0;'>USPESNO OBRISANO</h2>";
+                // Centriranje teksta preko diag-target kontejnera
+                document.getElementById('diag-target').innerHTML = "<center><h2 style='color:var(--safe); font-family:Orbitron; margin-top:100px;'>USPESNO OBRISANO</h2></center>";
                 document.getElementById('scan-btn').style.display = "none";
                 setTimeout(() => {
-                    document.getElementById('diag-target').innerHTML = `<p style="color:#222; font-family:Orbitron;">SKENIRANJE SPREMNO</p>`;
+                    document.getElementById('diag-target').innerHTML = `<center><p style="color:#222; font-family:Orbitron; margin-top:100px;">SKENIRANJE SPREMNO</p></center>`;
                     const btn = document.getElementById('scan-btn');
                     btn.innerText = "Skeniraj vozilo"; btn.style.background = "var(--accent)"; btn.style.display = "block"; btn.onclick = realScan;
                 }, 3000);
@@ -270,7 +263,8 @@
         function hTM(e) {
             let diff = tsX - e.touches[0].clientX;
             if (Math.abs(diff) > 80) {
-                moveNav(diff > 0 ? 1 : -1);
+                if (diff > 0 && currentView < 2) currentView++; else if (diff < 0 && currentView > 0) currentView--;
+                document.getElementById('view-slider').style.transform = `translateX(-${currentView * 100}vw)`;
                 tsX = e.touches[0].clientX;
             }
         }
