--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 const { outcome } = await deferredPrompt.userChoice;
                 deferredPrompt = null;
             } else {
-                alert("Koristite Chrome meni (3 tackice) -> Install App.");
+                alert("Koristite Chrome meni (3 tackice) -> Install App ili Add to Home Screen.");
             }
         }
 
@@ -187,45 +187,46 @@
             setTimeout(() => {
                 document.getElementById('bt-loader').style.display = 'none';
                 document.getElementById('diag-target').innerHTML = `<h2 style="color:var(--safe); margin-top:50px;">USPESNO OBRISANO</h2>`;
-// PWA Detektor - Ispisuje status na ekranu
-window.addEventListener('load', () => {
-    const debugDiv = document.createElement('div');
-    debugDiv.style = "position:fixed; bottom:80px; left:10px; right:10px; background:rgba(0,0,0,0.8); color:white; font-size:10px; padding:10px; z-index:9999; border:1px solid #333; font-family:monospace;";
-    debugDiv.innerHTML = "<b style='color:var(--accent)'>PWA STATUS:</b><br>";
-    document.body.appendChild(debugDiv);
-
-    const check = (name, condition) => {
-        debugDiv.innerHTML += `${name}: ${condition ? '<span style="color:green">OK</span>' : '<span style="color:red">GRESKA</span>'}<br>`;
-    };
-
-    // 1. Provera HTTPS
-    check("HTTPS", window.location.protocol === 'https:');
-
-    // 2. Provera Manifesta
-    const manifest = document.querySelector('link[rel="manifest"]');
-    check("MANIFEST LINK", !!manifest);
-
-    // 3. Provera Service Workera
-    if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.getRegistration().then(reg => {
-            check("SW REGISTROVAN", !!reg);
-            if(reg) check("SW AKTIVAN", reg.active !== null);
-        });
-    } else {
-        check("SW PODRSKA", false);
-    }
-
-    // 4. Provera Ikonice (da li link radi)
-    const img = new Image();
-    img.src = "https://i.ibb.co/Lhb8Y6H/dcs-icon.png";
-    img.onload = () => check("IKONICA UCITANA", true);
-    img.onerror = () => check("IKONICA UCITANA", false);
-});
-          document.getElementById('scan-btn').style.display = 'none';
+                document.getElementById('scan-btn').style.display = 'none';
             }, 2000);
         }
 
         if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
+
+        // --- PWA DETEKTOR ---
+        window.addEventListener('load', () => {
+            const debugDiv = document.createElement('div');
+            debugDiv.style = "position:fixed; bottom:20px; left:10px; right:10px; background:rgba(0,0,0,0.9); color:white; font-size:11px; padding:15px; z-index:10000; border:2px solid #333; font-family:monospace; border-radius:10px;";
+            debugDiv.innerHTML = "<b style='color:#00d2ff; font-size:14px;'>PWA DETEKTOR:</b><br><br>";
+            document.body.appendChild(debugDiv);
+
+            const check = (name, condition) => {
+                const color = condition ? 'lime' : 'red';
+                const status = condition ? 'OK' : 'GRESKA';
+                debugDiv.innerHTML += `${name}: <b style="color:${color}">${status}</b><br>`;
+            };
+
+            check("HTTPS (SIGURNOST)", window.location.protocol === 'https:');
+            
+            const manifest = document.querySelector('link[rel="manifest"]');
+            check("MANIFEST LINK", !!manifest);
+
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.getRegistration().then(reg => {
+                    check("SW REGISTROVAN", !!reg);
+                    if(reg) check("SW AKTIVAN", reg.active !== null);
+                });
+            } else {
+                check("SW PODRSKA", false);
+            }
+
+            const img = new Image();
+            img.src = "https://i.ibb.co/Lhb8Y6H/dcs-icon.png";
+            img.onload = () => check("IKONICA (512px)", true);
+            img.onerror = () => check("IKONICA (512px)", false);
+
+            debugDiv.innerHTML += `<br><button onclick="this.parentElement.remove()" style="width:100%; background:#333; color:white; border:none; padding:10px; border-radius:5px;">ZATVORI DETEKTOR</button>`;
+        });
     </script>
 </body>
 </html>
