--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <button id="pwa-btn" class="btn" style="display:none; background:#fff; color:#000;">INSTALIRAJ</button>
     </div>
 
-    <div class="vin-bar"><span>VIN: <b id="vin-val">DCS_REAL_v60</b></span><span>STATUS: <b id="status-tag" style="color:var(--danger)">OFFLINE</b></span></div>
+    <div class="vin-bar"><span>VIN: <b id="vin-val">DCS_REAL_Final</b></span><span>STATUS: <b id="status-tag" style="color:var(--danger)">OFFLINE</b></span></div>
 
     <div id="view-slider">
         <div class="page"><div class="scroll-area" id="list-target"></div></div>
