--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="https://i.ibb.co/Lhb8Y6H/dcs-icon.png">
     <meta name="theme-color" content="#000000">
-    <title>DCS PRO v60</title>
+    <title>DCS PRO Final</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     
     <style>
